fix h1 alignment

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -192,6 +192,7 @@ header {
 }
 
 header h1 {
+	text-align: center;
 	position: relative;
 	margin: 0 0 0.33em;
 	white-space: nowrap;
@@ -394,7 +395,8 @@ article {
 
 @media only screen and (min-width: 50em) {
 
-	h1 { text-align: right; }
+	h1 { text-align: left; }
+	header h1 { text-align: right; }
 
 	body { width: 100%; }
 
